[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/darkbulb.png" type="Texture" id=1]
[ext_resource path="res://components/Bulb.gd" type="Script" id=2]
[ext_resource path="res://assets/Roboto-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 56, 104 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40, 24 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 40, 72 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 3 )

[node name="Bulb" type="KinematicBody2D" groups=[
"outputs",
]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 6, -24 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 48, 0, 96, -56, 96 )
width = 5.0
default_color = Color( 0, 0, 0, 1 )

[node name="InputCollider" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InputCollider"]
position = Vector2( -40, 96 )
shape = SubResource( 2 )

[node name="LeftInputPosition" type="Position2D" parent="."]
position = Vector2( -56, 96 )

[node name="RightInputPosition" type="Position2D" parent="."]
position = Vector2( -8, 96 )

[node name="DragCollider" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DragCollider"]
position = Vector2( 0, -32 )
shape = SubResource( 3 )

[node name="Label" type="Label" parent="."]
margin_top = 104.0
margin_right = 24.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Q"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="input_event" from="InputCollider" to="." method="_on_InputCollider_input_event"]
[connection signal="input_event" from="DragCollider" to="." method="_on_DragCollider_input_event"]
